--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==2.10
 MarkupSafe==1.1.0
 piexif==1.1.2
 Pillow==7.2.0
+python-dotenv==0.14.0
 Stegano==0.9.0
 toml==0.10.0
 Werkzeug==0.15.5
